k8s/ls-host.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ls-host
spec:
  hostPID: true
  containers:
  - name: ls
    image: alpine:3.20
    command:
    - ls
    - -la
    - /host/var/lib/rancher/k3s/agent/etc/containerd/
    volumeMounts:
    - name: host
      mountPath: /host
    securityContext:
      privileged: true
  volumes:
  - name: host
    hostPath:
      path: /
  restartPolicy: Never
