k8s/write-registries.yaml
apiVersion: v1
kind: Pod
metadata:
  name: write-registries
spec:
  hostPID: true
  containers:
  - name: writer
    image: alpine:3.20
    command:
    - sh
    - -c
    - |
      [...]
    volumeMounts:
    - name: host
      mountPath: /host
    securityContext:
      privileged: true
  volumes:
  - name: host
    hostPath:
      path: /
  restartPolicy: Never
